# tost

./: .gitignore  CLAUDE.md  Incydenty.md  LAB_CC.code-workspace  LICENSE  NOTION_SYNC.md  README.md  THC.md  TOST_INTEGRATION_GUIDE.md  context.md  create-shortcut-cc.ps1  create-shortcut-holmes.ps1  create-shortcut-launcher.ps1  create-shortcut-notion-sync.ps1  create-shortcut-ping.ps1  create-shortcut-thc.ps1  create-shortcut.ps1  holmes-desktop.ps1  notion-sync-desktop.ps1  ping-autostart-wrapper.ps1  ping-desktop.ps1  pyproject.toml  register-ping-autostart.ps1  sh.exe.stackdump  thc-desktop.ps1  tost-desktop.ps1  tost-launch.bat  tost-launcher.ps1  tost.toml.example
.claude/: settings.local.json
tost/: __init__.py  __main__.py  baseline.py  cc_panel.py  cli.py  collector.py  config.py  cost.py  dashboard.py  duel.py  duel_dashboard.py  holmes.py  holmes_rules.toml  holmes_ui.py  jsonl_scanner.py  notion_sync.py  ping.py  ping_ui.py  sim_dashboard.py  simulator.py  sound.py  store.py  taryfa.py  taryfa_notion.py  taryfa_thresholds.toml  thc.py  thc_mini.py  thc_tiers.py  thc_tiers.toml  trainer.py  trainer_dashboard.py
